Fix Java 8 compile error: replace isBlank() with trim().isEmpty()
String.isBlank() is Java 11+; Docker build uses Java 8.

Co-authored-by: Cursor <cursoragent@cursor.com>